// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`tool parameters JSON Schema (wire shape) apply_patch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "patchText": {
      "description": "The full patch text that describes all changes to be made",
      "type": "string",
    },
  },
  "required": [
    "patchText",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) bash 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "command": {
      "description": "The command to execute",
      "type": "string",
    },
    "timeout": {
      "description": "Optional timeout in milliseconds",
      "exclusiveMinimum": 0,
      "maximum": 9007199254740991,
      "minimum": -9007199254740991,
      "type": "integer",
    },
    "workdir": {
      "description": "The working directory to run the command in. Defaults to the current directory. Use this instead of 'cd' commands.",
      "type": "string",
    },
  },
  "required": [
    "command",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) edit 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "filePath": {
      "description": "The absolute path to the file to modify",
      "type": "string",
    },
    "newString": {
      "description": "The text to replace it with (must be different from oldString)",
      "type": "string",
    },
    "oldString": {
      "description": "The text to replace",
      "type": "string",
    },
    "replaceAll": {
      "description": "Replace all occurrences of oldString (default false)",
      "type": "boolean",
    },
  },
  "required": [
    "filePath",
    "oldString",
    "newString",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) glob 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "path": {
      "description": "The directory to search in. If not specified, the current working directory will be used. IMPORTANT: Omit this field to use the default directory. DO NOT enter "undefined" or "null" - simply omit it for the default behavior. Must be a valid directory path if provided.",
      "type": "string",
    },
    "pattern": {
      "description": "The glob pattern to match files against",
      "type": "string",
    },
  },
  "required": [
    "pattern",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) grep 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "include": {
      "description": "File pattern to include in the search (e.g. "*.js", "*.{ts,tsx}")",
      "type": "string",
    },
    "path": {
      "description": "The directory to search in. Defaults to the current working directory.",
      "type": "string",
    },
    "pattern": {
      "description": "The regex pattern to search for in file contents",
      "type": "string",
    },
  },
  "required": [
    "pattern",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) invalid 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "error": {
      "type": "string",
    },
    "tool": {
      "type": "string",
    },
  },
  "required": [
    "tool",
    "error",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) lsp 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "character": {
      "description": "The character offset (1-based, as shown in editors)",
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "filePath": {
      "description": "The absolute or relative path to the file",
      "type": "string",
    },
    "line": {
      "description": "The line number (1-based, as shown in editors)",
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "operation": {
      "description": "The LSP operation to perform",
      "enum": [
        "goToDefinition",
        "findReferences",
        "hover",
        "documentSymbol",
        "workspaceSymbol",
        "goToImplementation",
        "prepareCallHierarchy",
        "incomingCalls",
        "outgoingCalls",
      ],
      "type": "string",
    },
    "query": {
      "description": "Search query for workspaceSymbol. Empty string requests all symbols.",
      "type": "string",
    },
  },
  "required": [
    "operation",
    "filePath",
    "line",
    "character",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) plan 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {},
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) question 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "questions": {
      "description": "Questions to ask",
      "items": {
        "properties": {
          "header": {
            "description": "Very short label (max 30 chars)",
            "type": "string",
          },
          "multiple": {
            "description": "Allow selecting multiple choices",
            "type": "boolean",
          },
          "options": {
            "description": "Available choices",
            "items": {
              "properties": {
                "description": {
                  "description": "Explanation of choice",
                  "type": "string",
                },
                "label": {
                  "description": "Display text (1-5 words, concise)",
                  "type": "string",
                },
              },
              "required": [
                "label",
                "description",
              ],
              "type": "object",
            },
            "type": "array",
          },
          "question": {
            "description": "Complete question",
            "type": "string",
          },
        },
        "required": [
          "question",
          "header",
          "options",
        ],
        "type": "object",
      },
      "type": "array",
    },
  },
  "required": [
    "questions",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) read 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "filePath": {
      "description": "The absolute path to the file or directory to read",
      "type": "string",
    },
    "limit": {
      "description": "The maximum number of lines to read (defaults to 2000)",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
    "offset": {
      "description": "The line number to start reading from (1-indexed)",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
  },
  "required": [
    "filePath",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) skill 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "name": {
      "description": "The name of the skill from available_skills",
      "type": "string",
    },
  },
  "required": [
    "name",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) task 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "background": {
      "description": "Run the agent in the background. You will be notified when it completes. DO NOT sleep, poll, or proactively check on its progress",
      "type": "boolean",
    },
    "command": {
      "description": "The command that triggered this task",
      "type": "string",
    },
    "description": {
      "description": "A short (3-5 words) description of the task",
      "type": "string",
    },
    "prompt": {
      "description": "The task for the agent to perform",
      "type": "string",
    },
    "subagent_type": {
      "description": "The type of specialized agent to use for this task",
      "type": "string",
    },
    "task_id": {
      "description": "This should only be set if you mean to resume a previous task (you can pass a prior task_id and the task will continue the same subagent session as before instead of creating a fresh one)",
      "type": "string",
    },
  },
  "required": [
    "description",
    "prompt",
    "subagent_type",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) todo 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "todos": {
      "description": "The updated todo list",
      "items": {
        "properties": {
          "content": {
            "description": "Brief description of the task",
            "type": "string",
          },
          "priority": {
            "description": "Priority level of the task: high, medium, low",
            "type": "string",
          },
          "status": {
            "description": "Current status of the task: pending, in_progress, completed, cancelled",
            "type": "string",
          },
        },
        "required": [
          "content",
          "status",
          "priority",
        ],
        "type": "object",
      },
      "type": "array",
    },
  },
  "required": [
    "todos",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) webfetch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "format": {
      "default": "markdown",
      "description": "The format to return the content in (text, markdown, or html). Defaults to markdown.",
      "enum": [
        "text",
        "markdown",
        "html",
      ],
      "type": "string",
    },
    "timeout": {
      "description": "Optional timeout in seconds (max 120)",
      "type": "number",
    },
    "url": {
      "description": "The URL to fetch content from",
      "type": "string",
    },
  },
  "required": [
    "url",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) websearch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "contextMaxCharacters": {
      "description": "Maximum characters for context string optimized for LLMs (default: 10000)",
      "type": "number",
    },
    "livecrawl": {
      "description": "Live crawl mode - 'fallback': use live crawling as backup if cached content unavailable, 'preferred': prioritize live crawling (default: 'fallback')",
      "enum": [
        "fallback",
        "preferred",
      ],
      "type": "string",
    },
    "numResults": {
      "description": "Number of search results to return (default: 8)",
      "type": "number",
    },
    "query": {
      "description": "Websearch query",
      "type": "string",
    },
    "type": {
      "description": "Search type - 'auto': balanced search (default), 'fast': quick results, 'deep': comprehensive search",
      "enum": [
        "auto",
        "fast",
        "deep",
      ],
      "type": "string",
    },
  },
  "required": [
    "query",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) write 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "content": {
      "description": "The content to write to the file",
      "type": "string",
    },
    "filePath": {
      "description": "The absolute path to the file to write (must be absolute, not relative)",
      "type": "string",
    },
  },
  "required": [
    "content",
    "filePath",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) spinosa_frame 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "cleanedPrompt": {
      "description": "The request text, stripped of preamble",
      "type": "string",
    },
    "decision": {
      "description": "Orchestrated intent dimensions from spinosa_route",
      "properties": {
        "confidence": {
          "type": "number",
        },
        "coverage": {
          "enum": [
            "opportunistic",
            "sufficient",
            "representative",
            "exhaustive",
          ],
          "type": "string",
        },
        "evaluation": {
          "enum": [
            "always",
            "on_failure",
            "sampled",
            "never",
          ],
          "type": "string",
        },
        "mode": {
          "enum": [
            "orchestrated",
          ],
          "type": "string",
        },
        "mutation": {
          "enum": [
            "none",
            "propose",
            "allowed",
            "requires_approval",
          ],
          "type": "string",
        },
        "operation": {
          "enum": [
            "research",
            "corpus",
            "maintenance",
            "meta",
          ],
          "type": "string",
        },
        "outputs": {
          "items": {
            "enum": [
              "chat",
              "report",
              "table",
              "visualization",
              "map",
            ],
            "type": "string",
          },
          "type": "array",
        },
        "reason": {
          "type": "string",
        },
        "scope": {
          "enum": [
            "local",
            "subset",
            "corpus_wide",
          ],
          "type": "string",
        },
        "strategy": {
          "type": "string",
        },
        "verification": {
          "enum": [
            "none",
            "normal",
            "strict",
          ],
          "type": "string",
        },
      },
      "required": [
        "mode",
        "operation",
        "strategy",
        "scope",
        "coverage",
        "outputs",
        "mutation",
        "verification",
        "evaluation",
        "reason",
        "confidence",
      ],
      "type": "object",
    },
    "workspacePath": {
      "description": "Workspace root override (defaults to session directory)",
      "type": "string",
    },
  },
  "required": [
    "cleanedPrompt",
    "decision",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) spinosa_gate 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "coverage": {
      "description": "Coverage contract from the route decision",
      "enum": [
        "opportunistic",
        "sufficient",
        "representative",
        "exhaustive",
      ],
      "type": "string",
    },
    "partitionsAccounted": {
      "description": "Partitions accounted (exhaustive)",
      "type": "number",
    },
    "partitionsTotal": {
      "description": "Partitions in the denominator (exhaustive)",
      "type": "number",
    },
    "sourceCount": {
      "description": "Distinct sources evidencing the claim",
      "type": "number",
    },
    "strataCovered": {
      "description": "Strata covered (representative)",
      "type": "number",
    },
    "strataTotal": {
      "description": "Strata in the denominator (representative)",
      "type": "number",
    },
  },
  "required": [
    "coverage",
    "sourceCount",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) spinosa_mint_paths 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "branch": {
      "description": "Descriptive branch/batch slug for evidence fan-out and extraction",
      "type": "string",
    },
    "kinds": {
      "description": "Artifact kinds to mint paths for",
      "items": {
        "enum": [
          "goal",
          "evidence",
          "evidence_appendix",
          "extraction",
          "analysis",
          "serendipity",
          "report",
          "verification",
          "evaluation",
          "coverage",
          "map",
          "cleanup",
        ],
        "type": "string",
      },
      "type": "array",
    },
    "reportNumber": {
      "description": "Next free NN for writer reports",
      "type": "string",
    },
    "reportSlug": {
      "description": "Kebab-case topic slug for writer reports",
      "type": "string",
    },
    "runID": {
      "description": "Run ID from spinosa_frame (YYYYMMDD-short_hash)",
      "type": "string",
    },
  },
  "required": [
    "runID",
    "kinds",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) spinosa_route 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "command": {
      "description": "Slash command name without leading slash, if any",
      "type": "string",
    },
    "explicitAgent": {
      "description": "User-selected agent, if any",
      "type": "string",
    },
    "fileCount": {
      "description": "Attached file count",
      "type": "number",
    },
    "fileNames": {
      "description": "Attached file names",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "setupStatus": {
      "description": "Workspace setup status from .spinosa/workspace",
      "enum": [
        "not_started",
        "importing",
        "cli_started",
        "workspace_started",
        "unknown",
      ],
      "type": "string",
    },
    "text": {
      "description": "The user request to classify",
      "type": "string",
    },
  },
  "required": [
    "text",
    "setupStatus",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) spinosa_verify 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "relativePath": {
      "description": "Artifact path relative to the workspace root",
      "type": "string",
    },
    "runID": {
      "description": "Run ID for linkage checks",
      "type": "string",
    },
    "validator": {
      "description": "Artifact kind to check against",
      "enum": [
        "goal",
        "evidence_packet",
        "analysis",
        "serendipity",
        "report",
        "verification",
        "evaluation",
        "extraction",
        "map",
        "coverage",
        "cleanup",
      ],
      "type": "string",
    },
    "workspacePath": {
      "description": "Workspace root override (defaults to session directory)",
      "type": "string",
    },
  },
  "required": [
    "relativePath",
    "validator",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) write_report 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "conclusions": {
      "description": "Critical reflection: what we expected vs what we found, which assumptions held or broke, implications.",
      "type": "string",
    },
    "filename": {
      "description": "Report filename: NN_{topic-slug}.md (e.g. 05_coastal-erosion-normandy.md). Must start with a 2-digit number followed by an underscore.",
      "type": "string",
    },
    "goal": {
      "description": "What the research aimed to answer",
      "type": "string",
    },
    "pipeline": {
      "description": "Agent chain, e.g. 'searcher → writer → verifier → evaluator'",
      "type": "string",
    },
    "query": {
      "description": "Original user query",
      "type": "string",
    },
    "report": {
      "description": "Main body: evidence, interpretation, analysis, patterns. Structure freely with H2/H3.",
      "type": "string",
    },
    "reproducibility": {
      "properties": {
        "agents": {
          "description": "Agent chain",
          "type": "string",
        },
        "filesRead": {
          "description": "Files read",
          "type": "number",
        },
        "filesScanned": {
          "description": "Files scanned",
          "type": "number",
        },
        "gaps": {
          "description": "Coverage gaps",
          "type": "string",
        },
        "globPatterns": {
          "description": "Glob patterns used",
          "items": {
            "type": "string",
          },
          "type": "array",
        },
        "grepPatterns": {
          "description": "Grep patterns used",
          "items": {
            "type": "string",
          },
          "type": "array",
        },
        "mapsAccessed": {
          "description": "Number of maps accessed",
          "type": "number",
        },
        "searchRounds": {
          "description": "Search rounds",
          "type": "number",
        },
        "sources": {
          "description": "Source paths referenced",
          "items": {
            "type": "string",
          },
          "type": "array",
        },
        "tags": {
          "description": "Keywords/terms used",
          "items": {
            "type": "string",
          },
          "type": "array",
        },
      },
      "required": [
        "agents",
        "sources",
      ],
      "type": "object",
    },
    "scope": {
      "description": "One-line description of the report scope",
      "type": "string",
    },
    "serendipity": {
      "description": "Hidden connections and alternative viewpoints. Omit entirely when serendippo did not run.",
      "type": "string",
    },
    "status": {
      "description": "Verification status (default: draft)",
      "enum": [
        "draft",
        "pass",
        "pass_with_corrections",
      ],
      "type": "string",
    },
    "title": {
      "description": "H1 headline for the report (mirrors the goal statement)",
      "type": "string",
    },
    "tldr": {
      "description": "Short natural-language answer, 1–3 sentences",
      "type": "string",
    },
  },
  "required": [
    "filename",
    "title",
    "scope",
    "pipeline",
    "query",
    "goal",
    "tldr",
    "report",
    "conclusions",
    "reproducibility",
  ],
  "type": "object",
}
`;
